Adjusted Attribute Position, Resolved Side Scroll on Smaller Devices

--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ body {
   /* Story Set Attribute */
   .attribute {
     position: relative;
-    left: 60%;
+    left: 50%;
   }
 }
 /* Lowering Font-Size for Mobile */
